--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     }
   ],
   "config": {
-    "preferred-install": "dist",
+    "preferred-install": "source",
     "sort-packages": true
   },
   "require": {
