--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "wpackagist-plugin/limit-login-attempts-reloaded": "*",
     "wpackagist-plugin/spinupwp": "*",
     "wpackagist-theme/twentynineteen": "*",
-    "discourse/wp-discourse": "dev-master#d1886ac8e5ba90a253695eaf8d4122edecc2e8b5"
+    "discourse/wp-discourse": "*"
   },
   "extra": {
     "wordpress-install-dir": "public/wp",
