--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "wpackagist-plugin/limit-login-attempts-reloaded": "*",
     "wpackagist-plugin/spinupwp": "*",
     "wpackagist-theme/twentynineteen": "*",
-    "discourse/wp-discourse": "dev-master#e336eed058795a2c628319e8271741e0be90f798"
+    "discourse/wp-discourse": "*"
   },
   "extra": {
     "wordpress-install-dir": "public/wp",
