--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
   },
   "autoload": {
     "psr-4": {
-      "DeliciousBrains\\SpinupWPComposerSite\\": "app/"
+      "Pavilion\\SpinupWPComposerSite\\": "app/"
     }
   }
 }
